--- a/views/mail/find-password.ejs
+++ b/views/mail/find-password.ejs
@@ -5,7 +5,7 @@
   <title>인증코드</title>
 </head>
 <body>
-<p style="color: #111827; font: 700 24px/30.72px 'Noto Sans', sans-serif">아이디를 분실하셨나요?<br/>
+<p style="color: #111827; font: 700 24px/30.72px 'Noto Sans', sans-serif">비밀번호를 분실하셨나요?<br/>
   <span style="color: #5FCC9B">인증</span>을 위해<br/>
   인증번호 입력을 부탁드립니다.
 </p>
